--- a/src/app/components/__defref/defref.scss
+++ b/src/app/components/__defref/defref.scss
@@ -17,4 +17,28 @@
       }
     }
   }
+
+  .components {
+    // padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+
+    > div {
+      margin-top: 5px;
+      margin-right: 5px;
+
+      > div {
+        border: 1px solid #f5f5f5;
+        padding: 5px 10px;
+        border-radius: 5px;
+
+        &:hover {
+          border: 1px solid #999;
+          background: #999;
+          color: #fff;
+        }
+      }
+    }
+  }
 }
