百度地图API接口

--- a/src/app/containers/baidu-map/baidu-map.html
+++ b/src/app/containers/baidu-map/baidu-map.html
@@ -12,6 +12,10 @@
     <div class="btn" (click)="GetCurrentPosition()">获取位置</div>
     <div class="btn" (click)="NavigationControl()">导航</div>
     <div class="btn" (click)="AddMarker()">标注</div>
+    <div class="btn" (click)="AddInfomation()">信息</div>
+    <div class="btn" (click)="AddPolyline()">拆线</div>
+    <div class="btn" (click)="AddDefinedOverlay()">自定义</div>
+    <div class="btn" (click)="AddPosition()">创建位置</div>
   </div>
 
 </div>
