--- a/src/app/containers/baidu-map/baidu-map.scss
+++ b/src/app/containers/baidu-map/baidu-map.scss
@@ -19,7 +19,7 @@
     position: relative;
     z-index: 999;
     display: flex;
-    // padding: 0 10px;
+    flex-wrap: wrap;
 
     .btn {
       background: aliceblue;
