--- a/src/app/managers/login/login.scss
+++ b/src/app/managers/login/login.scss
@@ -1,7 +1,48 @@
 .loginCss {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
   padding: 10px;
+
+  .ctrl {
+    margin-top: 20vh;
+    position: relative;
+
+    .username {
+      position: relative;
+      display: flex;
+
+      input {
+        border: 1px solid #f5f5f5;
+        padding: 5px 10px;
+        border-radius: 5px;
+        flex: 1;
+        font-size: 1rem;
+      }
+    }
+
+    .password {
+      @extend .username;
+      margin-top: 2rem;
+    }
+  }
+
+  .operator {
+    display: flex;
+
+    padding: 2rem;
+
+    .btn {
+      margin: 5px;
+      flex: 1;
+      text-align: center;
+      padding: 5px 10px;
+
+      > div {
+        padding: 5px 10px;
+        border: 1px solid #999;
+
+        &:hover {
+          border: 1px solid blue;
+        }
+      }
+    }
+  }
 }
