插入数据操作

--- a/src/app/containers/members/members.component.html
+++ b/src/app/containers/members/members.component.html
@@ -1,5 +1,5 @@
 <!--<xtn-navbar Title="成员列表"></xtn-navbar>-->
-<xtn-navbar [(Title)]="__Title"></xtn-navbar>
+<!--<xtn-navbar [(Title)]="__Title"></xtn-navbar>-->
 
 <div class="container">
   <h1>{{title}}</h1>
