--- a/src/app/components/apiitem/apiitem.html
+++ b/src/app/components/apiitem/apiitem.html
@@ -13,41 +13,47 @@
     <input type="text" [(ngModel)]="ApiInfo.PathName" />
   </div>
   <div class="ruleTitle">
-    规则列表：
-  </div>
-  <div class="ruleInfo">
-    <span>返回结果索引</span>
-    <input type="text" [(ngModel)]="RuleInfo.result">
-    <span>参数字段</span>
-    <input type="text" [(ngModel)]="RuleInfo.fields">
-  </div>
+    <span class="desc"> 规则列表： </span>
+    <span class="index">返回结果索引</span>
+    <input class="number" type="number" [(ngModel)]="RuleInfo.result">
+    <span class="params">参数字段</span>
+    <input class="fields" type="text" [(ngModel)]="RuleInfo.fields">
 
-  <div class="rule">
-    <div *ngFor="let rule of RuleInfo.rules">
-      <div>
-        <span>序号</span> <input type="number" [(ngModel)]="rule.id" />
-      </div>
-      <div>
-        <span>类型</span>
-        <select required [(ngModel)]="rule.type">
+  </div>
+  <div class="rule" *ngFor="let rule of RuleInfo.rules; let i = index;
+  let isFirst = first;
+  let isLast = last;
+  ">
+    <div class="row">
+      <span class="title">规则号</span>
+      <input type="number" [(ngModel)]="rule.id" />
+      <span class="title">类型</span>
+      <select required [(ngModel)]="rule.type">
           <option *ngFor="let item of RuleType" [value]="item.key">{{item.title}} </option>
         </select>
-      </div>
-      <div>
-        <span>是否返回多行数据</span>
-        <input type="checkbox" [(ngModel)]="rule.isRows" />
-      </div>
-      <div>
-        <span>结果名称</span>
-        <input type="text" required [(ngModel)]="rule.name" />
-      </div>
-      <div>
-        <span>SQL语句</span>
-        <input type="text" [(ngModel)]="rule.sql" /> </div>
-    </div>
-  </div>
+      <span class="title">多行数据</span>
+      <input type="checkbox" [(ngModel)]="rule.isRows" />
+      <span class="title">结果名称</span>
+      <input type="text" required [(ngModel)]="rule.name" />
 
-  <div>
-    {{Source|json}}
+      <div class="btns">
+        <div class="btn" *ngIf="!isFirst">
+          <div (click)="__ClickMove(-1,i)">上移</div>
+        </div>
+        <div class="btn" *ngIf="!isLast">
+          <div (click)="__ClickMove(1,i)">下移</div>
+        </div>
+        <div class="btn"> 
+          <div (click)="__ClickInsert(i)">插入一条</div>
+        </div>
+        <div class="btn">
+          <div (click)="__ClickDelete(rule,i)">删除</div>
+        </div>
+      </div>
+    </div>
+    <div class="sqlInfo">
+      <div class="title">规则执行的SQL语句</div>
+      <textarea [(ngModel)]="rule.sql"></textarea>
+    </div>
   </div>
 </div>
