--- a/src/app/components/apiitem/apiitem.scss
+++ b/src/app/components/apiitem/apiitem.scss
@@ -1,18 +1,41 @@
 .apiitemCss {
   border: 1px solid;
-  >div {
+
+  .btns {
+    display: flex;
+
+    .btn {
+      margin: 0 5px;
+
+      > div {
+        padding: 5px 10px;
+        border: 1px solid #f5f5f5;
+        border-radius: 5px;
+
+        &:hover {
+          background: #999;
+          color: #fff;
+        }
+      }
+    }
+  }
+
+  > div {
     cursor: default;
   }
+
   .master {
     border-bottom: 1px solid;
     padding: 10px;
     display: flex;
     align-items: center;
+
     .title {
       white-space: nowrap;
       overflow: hidden;
       padding: 5px;
     }
+
     input {
       padding: 5px;
     }
@@ -21,13 +44,18 @@
       flex: 1;
     }
   }
+
+  .ruleList {
+    font-size: 16px;
+  }
+
   .ruleTitle {
     border-bottom: 1px solid;
     padding: 10px;
-    font-size: 16px;
+    // font-size: 16px;
     display: flex;
     align-items: center;
-    .desc {}
+
     .number {
       width: 40px;
     }
@@ -44,41 +72,29 @@
     .row {
       display: flex;
       align-items: center;
+
       .title {
         padding: 5px 15px;
       }
+
       input[type='number'] {
         width: 30px;
       }
+
       input[type='text'] {
         width: 100px;
       }
 
-      .btns {
-        display: flex;
-
-        .btn {
-          margin: 0px 5px;
-
-          >div {
-            padding: 5px 10px;
-            border: 1px solid #f5f5f5;
-            border-radius: 5px;
-            &:hover {
-              background: #999;
-              color: #fff;
-            }
-          }
-        }
-      }
     }
 
     .sqlInfo {
       border-top: 1px solid #666;
+
       div {
-        padding: 5px 0px;
+        padding: 5px 0;
         font-size: 14px;
       }
+
       textarea {
         padding: 5px;
         width: calc(100% - 10px);
@@ -88,7 +104,7 @@
     }
   }
 
-  >div:last-child {
+  > div:last-child {
     border-bottom: none;
   }
 }
