--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -1,5 +1,5 @@
-<xtn-navbar [(Title)]="__Title"></xtn-navbar>
-<xtn-defref></xtn-defref>
+<!-- <xtn-navbar [(Title)]="__Title"></xtn-navbar>
+<xtn-defref></xtn-defref> -->
 
 <div class="homeCss">
   <div class="callApi" (click)="__CallApi()">call api</div>
