--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <xtn-navbar [(Title)]="__Title"></xtn-navbar>
 <xtn-defref></xtn-defref>
 <router-outlet></router-outlet>
+
+<xtn-mode-action-sheet *ngIf="ActionSheetInfo" [ActionSheetInfo]="ActionSheetInfo">
+</xtn-mode-action-sheet>
