添加测试demo接口

--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -3,6 +3,14 @@
 
 <div class="homeCss">
   <div class="callApi" (click)="__CallApi()">call api</div>
+  <div class="demo">
+    <div class="btns">
+      <div class="btn" (click)="__UserInfo('get')">get request</div>
+      <div class="btn" (click)="__UserInfo('post')">post request</div>
+      <div class="btn" (click)="__UserInfo('del')">delete request</div>
+      <div class="btn" (click)="__UserInfo('put')">put request</div>
+    </div>
+  </div>
 
   <div class="apiResult">
     <div class="row" *ngFor="let item of DataList">
