--- a/src/app/containers/home/home.component.scss
+++ b/src/app/containers/home/home.component.scss
@@ -3,17 +3,20 @@
 
   .apiResult {
     border: 1px solid #f5f5f5;
+
     .row {
       border: 1px solid #f5f5f5;
       display: flex;
-      padding: 5px 0px;
+      padding: 5px 0;
       margin-bottom: 5px;
+
       &:hover {
         background: blue;
         color: #fff;
       }
-      .id,
-      .datetime {
+
+      .datetime,
+      .id {
         white-space: nowrap;
       }
 
@@ -21,7 +24,23 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        margin: 0px 5px;
+        margin: 0 5px;
+      }
+    }
+  }
+
+  .demo {
+    padding: 10px;
+
+    .btns {
+      display: flex;
+      flex-wrap: wrap;
+
+      .btn {
+        margin: 5px;
+        padding: 5px 10px;
+        text-align: center;
+        border: 1px solid #f1f1f1;
       }
     }
   }
