将页面通用的部分拆分组件

--- a/src/app/components/apiitem/apiitem.html
+++ b/src/app/components/apiitem/apiitem.html
@@ -14,13 +14,19 @@
       </div>
     </div>
   </div>
-  <div class="ruleTitle">
+  <xtn-rule-info [Source]="RuleInfo"></xtn-rule-info>
+</div>
+
+
+<!--
+    <div class="ruleTitle">
     <span class="index">返回结果索引</span>
     <input class="number" type="number" [(ngModel)]="RuleInfo.result">
     <span class="params">参数字段</span>
     <input class="fields" type="text" [(ngModel)]="RuleInfo.fields">
 
   </div>
+
   <div class="rule" *ngFor="let rule of RuleInfo.rules; let i = index; let isFirst = first; let isLast = last; ">
     <div class="content">
       <div class="row">
@@ -29,20 +35,26 @@
           <input type="number" [(ngModel)]="rule.id" /></div>
         <div class="title">
           <div class="name"> 类型 </div>
-          <select required [(ngModel)]="rule.type">
+          <select required [(ngModel)]="rule.type" (change)="onChange_RuleType(rule.type)">
           <option *ngFor="let item of RuleType" [value]="item.key">{{item.title}} </option>
         </select>
         </div>
-        <div class="title">
+        <div class="title" *ngIf="rule.type === 'query'">
           <div class="name"> 多行数据</div>
           <input type="checkbox" [(ngModel)]="rule.isRows" />
         </div>
-        <div class="title">
+
+        <div class="title" *ngIf="rule.isRows===false">
+          <div class="name"> 合并数据</div>
+          <input type="checkbox" required [(ngModel)]="rule.isMergeOption" />
+        </div>
+
+        <div class="title" *ngIf="__IsShowResult(rule.type) === true && rule.isMergeOption===false">
           <div class="name"> 结果名称</div>
           <input type="text" required [(ngModel)]="rule.name" />
         </div>
       </div>
-      <div class="sqlInfo">
+      <div class="sqlInfo" *ngIf=" 'query,insert,update,delete'.indexOf(rule.type)>=0?true:false">
         <div class="oper">
           <div class="title">规则执行的SQL语句</div>
           <div class="btns btn-right">
@@ -62,6 +74,28 @@
         </div>
         <textarea [(ngModel)]="rule.sql"></textarea>
       </div>
+      <div class="judgeInfo" *ngIf="rule.type === 'judge'">
+        <h4>添加判断条件信息</h4>
+        <div class="judgeType">
+          this 方法:
+          <textarea [(ngModel)]="rule.judgeinfo.strByThis" placeholder="if((this.sex === \'男\' && this.cityname == \'上海\' ) || (this.age > 30 && this.cityname !== \'北京\')){return true;}return false;"></textarea>
+        </div>
+        <div class="judgeType">
+          eval方法:
+          <textarea [(ngModel)]="rule.judgeinfo.strByEval" placeholder="(\':sex\' !== \'男\' && \':cityname\' == \'北京\' ) || (:age > 30 && \':cityname\' !== \'北京\')"></textarea>
+        </div>
+        <div>
+          <h4>添加子规则，判断失败后要处理流程:</h4>
+          <div class="btns">
+            <div class="btn">
+              <div (click)="__AddJudgeChilrenRule(rule.judgeinfo)">添加规则 </div>
+            </div>
+          </div>
+        </div>
+
+        <div *ngFor="let item of rule.judgeinfo.chilrenRules">
+          <xtn-api-item [Source]="item" (onDelete)="__ClickDeleteChilrenItem($event,item)"></xtn-api-item>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  </div> -->
