--- a/src/app/components/rule/RuleItem.scss
+++ b/src/app/components/rule/RuleItem.scss
@@ -1,26 +1,3 @@
-.btns {
-  display: flex;
-
-  .btn {
-    margin: 0 5px;
-
-    >div {
-      padding: 5px 10px;
-      border: 1px solid #f5f5f5;
-      border-radius: 5px;
-
-      &:hover {
-        background: #999;
-        color: #fff;
-      }
-    }
-  }
-}
-
-.btn-right {
-  justify-content: flex-end;
-}
-
 .rulItemCss {
   display: flex;
 
@@ -46,6 +23,7 @@
       width: 100px;
     }
   }
+
   textarea {
     height: 100%;
     padding: 5px;
@@ -54,6 +32,7 @@
     font-size: 14px;
     height: 75px;
   }
+
   .sqlInfo {
     flex: 1;
     height: 100%;
@@ -68,14 +47,16 @@
       }
     }
   }
+
   .judgeInfo {
     @extend .sqlInfo;
+
     .judgeType {
       display: flex;
       white-space: nowrap;
       align-items: center;
 
-      >textarea {
+      > textarea {
         margin-left: 5px;
       }
     }
@@ -85,4 +66,9 @@
 .chilren {
   margin-left: 15px;
   border: 1px solid #f410f0;
+
+  .title {
+    display: flex;
+    align-items: center;
+  }
 }
