--- a/src/app/components/rule/RuleItem.html
+++ b/src/app/components/rule/RuleItem.html
@@ -14,7 +14,7 @@
       <input type="checkbox" [(ngModel)]="Rule.isRows" />
     </div>
 
-    <div class="title" *ngIf="Rule.isRows===false">
+    <div class="title" *ngIf="!Rule.isRows">
       <div class="name"> 合并数据</div>
       <input type="checkbox" required [(ngModel)]="Rule.isMergeOption" />
     </div>
@@ -45,7 +45,10 @@
     <textarea [(ngModel)]="Rule.sql"></textarea>
   </div>
   <div class="judgeInfo" *ngIf="Rule.type === 'judge'">
-    <h4>添加判断条件信息</h4>
+    <div class="bewrite">添加判断条件信息
+
+      <div class="failMsg"> <input type="text" placeholder="判断出错返回的信息" [(ngModel)]="Rule.judgeInfo.failMsg"></div>
+    </div>
     <div class="judgeType">
       this 方法:
       <textarea [(ngModel)]="Rule.judgeInfo.strByThis" placeholder="if((this.sex === \'男\' && this.cityname == \'上海\' ) || (this.age > 30 && this.cityname !== \'北京\')){return true;}return false;"></textarea>
