展示规则信息的时候，添加手风琴效果。

--- a/src/app/components/apiitem/apiitem.html
+++ b/src/app/components/apiitem/apiitem.html
@@ -1,4 +1,4 @@
-<div class="apiitemCss">
+<div class="apiitemCss" [@openClose]="stateExpression">
   <div class="master">
     <span class="title">是否启用</span>
     <input type="checkbox" [(ngModel)]="ApiInfo.Status">
