--- a/src/app/manageapi/apilist/apilist.scss
+++ b/src/app/manageapi/apilist/apilist.scss
@@ -10,6 +10,11 @@
         padding: 5px 0;
       }
 
+      &:hover{
+        // border: 1px solid #f5f5f5;
+        background: #f5f5f5;
+      }
+
       .method {
         width: 80px;
         padding: 5px;
