--- a/src/app/components/apiitem/apiitem.html
+++ b/src/app/components/apiitem/apiitem.html
@@ -1,7 +1,9 @@
 <div class="apiitemCss" [@openClose]="stateExpression">
   <div class="master">
-    <span class="title">是否启用</span>
+    <span class="title">启用</span>
     <input type="checkbox" [(ngModel)]="ApiInfo.Status">
+    <span class="title">Token访问</span>
+    <input type="checkbox" [(ngModel)]="ApiInfo.IsTokenAccess">
     <span class="title">请求方式：</span>
     <select [(ngModel)]="ApiInfo.Method">
       <option *ngFor="let item of MethodCollection"  [value]="item.key">{{item.title}}</option>
