--- a/src/app/manageapi/apilist/apilist.html
+++ b/src/app/manageapi/apilist/apilist.html
@@ -23,7 +23,7 @@
 
   </div>
   <div class="addApi">
-    <xtn-api-item [Source]="NewApiInfo" *ngIf="isAddNewApiInfo"></xtn-api-item>
+    <xtn-api-item [Source]="NewApiInfo" [IsExpanded]="isAddNewApiInfo" (onSave)="btnClickSave()"></xtn-api-item>
     <div class="btns">
       <div class="btn" (click)="btnClickAdd()">
         <div>
