json字符在存放 \n 字符转换，会出现在，将其实转为 \\n 然后再保存就没有问题了。 sys_rule添加bewrite字符，用来对接口进行描述用的。

--- a/src/app/components/apiitem/apiitem.html
+++ b/src/app/components/apiitem/apiitem.html
@@ -25,5 +25,8 @@
       </div>
     </div>
   </div>
+  <div class="bewrite">
+    <input type="text" required [(ngModel)]="ApiInfo.Bewrite" placeholder="接口描述200字以内" maxlength="200">
+  </div>
   <xtn-rule-info [Source]="RuleInfo"></xtn-rule-info>
 </div>
