--- a/src/app/manageapi/apilist/apilist.html
+++ b/src/app/manageapi/apilist/apilist.html
@@ -1,16 +1,20 @@
 <div class="apiListCss">
   <div class="apiInfo">
     <div class="api">
-      <div class="method">请求方式</div>
+      <div class="methodCn">类型</div>
+      <div class="method">类型</div>
       <div class="statu">状态</div>
       <div class="path">接口地址</div>
+      <div class="bewrite">描述</div>
       <div class="operator">操作</div>
     </div>
     <div *ngFor="let item of ApiList;let i = index;">
       <div class="api" (click)="onClickExpand(item)">
         <div class="method">{{item.Method}}</div>
+        <div class="method">{{item.MethodCn}}</div>
         <div class="statu">{{item.StatusCn}}</div>
         <div class="path">{{item.PathName}}</div>
+        <div class="bewrite">{{item.Bewrite}}</div>
         <div class="operator">
           {{ CurrentItem && CurrentItem.Id === item.Id ?'收起' :'展开' }}
         </div>
