--- a/src/app/manageapi/apilist/apilist.scss
+++ b/src/app/manageapi/apilist/apilist.scss
@@ -4,29 +4,41 @@
     .api {
       display: flex;
       border-top: 1px solid #f5f5f5; // padding: 5px 0px;
-
-      > div {
+      >div {
         border-right: 1px solid #f5f5f5;
         padding: 5px 0;
       }
 
-      &:hover{
+      &:hover {
         // border: 1px solid #f5f5f5;
         background: #f5f5f5;
       }
 
       .method {
-        width: 80px;
+        width: 35px;
         padding: 5px;
+      }
+      .methodCn {
+        @extend .method;
+      }
+      .__overflow {
+
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      .bewrite {
+        flex: 1;
+        padding: 5px;
+        @extend .__overflow;
       }
 
       .statu {
         padding: 5px 15px;
       }
-
       .path {
-        flex: 1;
         padding-left: 5px;
+        @extend .__overflow;
       }
 
       .operator {
@@ -44,13 +56,11 @@
 
     .btns {
       display: flex;
-      justify-content: center;
-      // padding: 20px;
-
+      justify-content: center; // padding: 20px;
       .btn {
         margin: 5px;
 
-        > div {
+        >div {
           border: 1px solid #f5f5f5;
           border-radius: 5px;
           padding: 5px 20px;
