--- a/src/app/containers/baidu-map/baidu-map.html
+++ b/src/app/containers/baidu-map/baidu-map.html
@@ -1,8 +1,5 @@
 <div class="baiduMapCss">
-
-  <!--<xtn-navbar [(Title)]="__Title"></xtn-navbar>
-  <xtn-defref></xtn-defref>-->
-
+  <xtn-navbar [(Title)]="__Title"></xtn-navbar>
   <div class="allMap">
     <div #baidumapRef></div>
   </div>
