--- a/src/app/containers/product/product.component.html
+++ b/src/app/containers/product/product.component.html
@@ -1,5 +1,5 @@
-<!--<xtn-navbar [(Title)]="__Title"></xtn-navbar>-->
-
+<xtn-navbar [(Title)]="__Title"></xtn-navbar>
+<xtn-defref></xtn-defref>
 <p>
   product works!
 </p>
