--- a/src/app/manage/register/register.html
+++ b/src/app/manage/register/register.html
@@ -1,5 +1,5 @@
+<xtn-navbar [(Title)]="__Title"></xtn-navbar>
 <div class="registerCss">
-  <div class="title">用户注册</div>
   <div class="row">
     <input type="text" [(ngModel)]="UserInfo.UserName" placeholder="请输入用户名称" maxtLength="50">
   </div>
