--- a/src/app/manage/userlist/userlist.html
+++ b/src/app/manage/userlist/userlist.html
@@ -1,7 +1,6 @@
-<div class="userlistCss">
-  <div>
+<xtn-navbar [(Title)]="__Title"></xtn-navbar>
 
-  </div>
+<div class="userlistCss">
   <div class="users">
     <div class="row">
       <div class="choose">全选</div>
