--- a/src/app/containers/my-component/my-component.component.html
+++ b/src/app/containers/my-component/my-component.component.html
@@ -1,5 +1,5 @@
-<!--<xtn-navbar Title="我的组件"></xtn-navbar>-->
 <xtn-navbar [(Title)]="__Title"></xtn-navbar>
+<xtn-defref></xtn-defref>
 <p>
   my-component works!
 </p>
