动态添加组件传参数事件。

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 
 <xtn-mode-action-sheet *ngIf="ActionSheetInfo" [ActionSheetInfo]="ActionSheetInfo">
 </xtn-mode-action-sheet>
+<xtn-mode-dialog *ngIf="DialogInfo" [(DialogInfo)]="DialogInfo"></xtn-mode-dialog>
